--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "axios": "^0.21.1",
+        "fuzzaldrin-plus": "^0.6.0",
         "querystring": "^0.2.0",
         "webextension-polyfill-ts": "^0.22.0"
     }
