--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "spotlight",
   "description": "Spotlight search for chrome",
   "homepage_url": "https://github.com/duongvanha/spotlight",
@@ -15,17 +15,14 @@
         "<all_urls>"
       ],
       "js": [
-        "build/content_script.js"
+        "content_script.js"
       ]
     }
   ],
   "background": {
-    "scripts": [
-      "build/background.js"
-    ],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html"
   },
   "permissions": [
@@ -34,12 +31,14 @@
     "tabs",
     "management",
     "storage",
-    "cookies",
+    "cookies"
+  ],
+  "host_permissions": [
     "*://*.shopbase.net/",
     "*://*.shopbase.com/"
   ],
   "commands": {
-    "_execute_browser_action": {
+    "_execute_action": {
       "suggested_key": {
         "windows": "Ctrl+J",
         "mac": "Command+J",
