--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "spotlight",
   "description": "Spotlight search for chrome",
   "homepage_url": "https://github.com/duongvanha/spotlight-chrome",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "icons": {
     "16": "icons/spotlight-logo16.png",
     "48": "icons/spotlight-logo48.png",
@@ -20,15 +20,10 @@
       "all_frames": true
     }
   ],
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "/window.js"
-      ],
-      "matches": [],
-      "extension_ids": []
-    }
-  ],
+  "web_accessible_resources": [{
+    "resources": ["window.js"],
+    "matches": ["<all_urls>"]
+  }],
   "background": {
     "service_worker": "background.js"
   },
@@ -40,7 +35,8 @@
     "tabs",
     "storage",
     "cookies",
-    "alarms"
+    "alarms",
+    "scripting"
   ],
   "host_permissions": [
     "*://*.shopbase.net/",
