--- a/public/manifest.json
+++ b/public/manifest.json
@@ -49,7 +49,8 @@
         "mac": "Command+J",
         "chromeos": "Ctrl+M",
         "linux": "Ctrl+M"
-      }
+      },
+      "description": "Open extension"
     }
   }
 }
