--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,7 +25,7 @@
       "resources": [
         "/window.js"
       ],
-      "matches": [],
+      "matches": ["<all_urls>"],
       "extension_ids": []
     }
   ],
@@ -40,7 +40,8 @@
     "tabs",
     "storage",
     "cookies",
-    "alarms"
+    "alarms",
+    "scripting"
   ],
   "host_permissions": [
     "*://*.shopbase.net/",
